--- a/project_frountend/style.css
+++ b/project_frountend/style.css
@@ -1,5 +1,4 @@
 body {
-  color: #ff69b4;
   background-color: #1C0827;
 }
 
@@ -57,7 +56,48 @@ body {
   margin: 20px;
   text-align: center;
   line-height: 75px;
-  font-size: 30px;
+  font-size: 10px;
   zoom: 1.6;
   color: #14CC6B;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  border-radius: 15px;
+  box-shadow: 0 7px #999;
+
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
 }
