--- a/project_frountend/style.css
+++ b/project_frountend/style.css
@@ -2,15 +2,39 @@ body {
   background-color: #1C0827;
 }
 
-.ghost-img {
+.login {
   text-align: center;
+  padding-top: 40px;
 }
+
+#front-title {
+  text-shadow: #EEEE00 0 0 30px, #FF0000 3px 5px 100px;
+  font-family: 'Offside', cursive;
+  font-size: 70px;
+  color: #29231F;
+}
+
+li.logo {
+  text-shadow: #EEEE00 0 0 2px, #FF0000 3px 5px 8px;
+  font-family: 'Offside', cursive;
+  color: Black;
+}
+
+.the_form {
+  zoom: 0.8;
+  padding-top: 30px;
+}
+
+.fire_img {
+  position: absolute;
+}
+
 .user_input {
   border: 1px solid #ccc;
   padding: 7px 10px;
   border-radius: 10px;
   font-size: 17px;
-  font-family: monospace;
+  font-family: "Offside";
   text-align: center;
 }
 
@@ -24,7 +48,7 @@ body {
   outline: none;
   color: #fff;
   background-color: #FFAF19;
-  font-family: monospace;
+  font-family: "Offside";
   font-size: 15px;
   border: none;
   border-radius: 15px;
@@ -41,20 +65,24 @@ body {
 header {
   display: flex;
   justify-content: center;
-  background-color: teal;
-  align-items: center;
-  padding: 0px 10% 20px 10%;
+  top: 0;
 }
 
 .nav-bar {
-  list-style: none;
-  align: center;
+  background-color: teal;
+  overflow: hidden;
+  position: fixed;
+  padding-bottom: 20px;
+  text-align: center;
+  width: 100%;
 }
 
 .nav-bar li {
+  list-style: none;
   display: inline-block;
   padding: 0px 20px;
   color: white;
+  font-family: "Offside";
 }
 
 
@@ -66,19 +94,30 @@ header {
 .graveyard {
   display: flex;
   justify-content: center;
+  align-content: space-between;
   flex-wrap: wrap;
   text-align: center;
+  padding-top: 150px;
+  margin-right: 60px;
 }
 
 .tomb {
-  background-color: #f1f1f1;
-  width: 80px;
-  margin: 20px;
   text-align: center;
-  line-height: 75px;
+  background-color: transparent;
+  width: 80px;
+  margin: 80px;
+  text-align: center;
   font-size: 10px;
-  zoom: 1.6;
-  color: #14CC6B;
+  zoom: 1;
+}
+
+.tomb-title {
+  color: Black;
+  font-family: "Offside";
+  position: relative;
+  bottom: 50%;
+  left: 90%;
+  word-wrap: break-word;
 }
 
 /* The Modal (background) */
