--- a/project_frountend/style.css
+++ b/project_frountend/style.css
@@ -11,7 +11,6 @@ body {
   background-color: teal;
 }
 
-
 .login {
   text-align: center;
   padding-top: 40px;
@@ -28,6 +27,7 @@ body {
   font-size: 70px;
   color: #29231F;
   padding-top: 70px;
+  font-weight: bold;
 }
 
 li.logo {
@@ -105,6 +105,12 @@ header {
   font-family: "Offside";
 }
 
+#light-candle {
+  position:fixed;
+  left:0;
+  bottom:0;
+  margin:0;
+}
 
 .graveyard {
   display: flex;
@@ -139,12 +145,12 @@ header {
   word-wrap: normal;
   position: absolute;
   top: 50%;
-  left: 55%;
+  left: 45%;
   transform: translate(-50%, -50%);
 }
 
 .tomb:hover {
-  text-shadow: yellow 0 1px 15px, yellow 3px 5px 100px;
+  text-shadow: 0 0 8px yellow;
 }
 
 /* The Modal (background) */
@@ -171,10 +177,11 @@ header {
   border: 1px solid #888;
   width: 40%;
   border-radius: 15px;
-  box-shadow: 0 7px #999;
+  /* box-shadow: 0 7px #999; */
   position: absolute;
   top: 20%;
   left: 30%;
+  box-shadow: 0px 0px 20px 8px #0ff
 }
 
 #js-tags {
@@ -218,4 +225,8 @@ header {
 
 .comment-ul{
   padding-left: 10px;
+}
+
+.dropdown {
+  font-family: "Offside";
 }
