--- a/project_frountend/style.css
+++ b/project_frountend/style.css
@@ -1,6 +1,20 @@
-body {
-  background-color: #1C0827;
+html {
+  height: 100%;
 }
+
+body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+}
+
+.daytime {
+  background-image: linear-gradient(#0a0a17, #201533, #2d1721);
+}
+.nightmode {
+  background-color: #170e27;
+}
+
 .container-fluid {
   display: table;   /* Allow the centering to work */
   margin: 0 auto;
@@ -8,12 +22,13 @@ body {
 
 .navbar {
   width: 100%;
-  background-color: teal;
+  background-color: #20797999;
 }
 
 .login {
   text-align: center;
   padding-top: 40px;
+  opacity: 0;
 }
 
 .candle-img {
@@ -68,13 +83,14 @@ li.logo {
   cursor: pointer;
   box-shadow: 0 7px #999;
   margin-top: 15px;
-  zoom: 0.6
+  zoom: 0.7;
 }
 .btns:hover, .like-btn:hover, .comment-btn:hover {
   box-shadow: 0 5px #666;
   transform: translateY(4px);
   margin-top: 15px;
 }
+
 
 
 .like-btn {
@@ -89,19 +105,9 @@ header {
 }
 
 
-.container-fluid {
-  background: teal;
-}
-
 
 
 .li-css {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  list-style: none;
-  display: inline-block;
-  padding: 0px 20px;
-  color: white;
   font-family: "Offside";
 }
 
@@ -140,7 +146,7 @@ header {
 .tomb-title {
   color: Black;
   font-family: "Offside";
-  font-size: 15px;
+  font-size: 17px;
   font-weight: bold;
   word-wrap: normal;
   position: absolute;
@@ -170,22 +176,22 @@ header {
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #b9b9b6f0;
   font-family: "Offside";
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
   width: 40%;
   border-radius: 15px;
-  /* box-shadow: 0 7px #999; */
   position: absolute;
   top: 20%;
   left: 30%;
-  box-shadow: 0px 0px 20px 8px #0ff
+  box-shadow: 0px 0px 20px 8px #48b1b1;
 }
 
 #js-tags {
   color: teal;
+  font-weight: bold;
 }
 
 #checkdiv {
@@ -194,6 +200,7 @@ header {
 
 .navbar-form {
   font-family: "Offside";
+  color: white;
 }
 
 .modal-titles {
@@ -204,7 +211,7 @@ header {
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: Black;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -229,4 +236,13 @@ header {
 
 .dropdown {
   font-family: "Offside";
+}
+
+.words-con {
+  background: #f5f5f5;
+  padding: 15px;
+  border-radius: 6px;
+}
+#story-content {
+  margin: 0;
 }
